--- a/CryptoPortfolioTracker.csproj
+++ b/CryptoPortfolioTracker.csproj
@@ -158,6 +158,9 @@
     <Page Update="Controls\ValueGainsControl.xaml">
       <SubType>Designer</SubType>
     </Page>
+    <Page Update="Dialogs\DashboardSettingsDialog.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Dialogs\RestorePortfolioDialog.xaml">
       <SubType>Designer</SubType>
     </Page>
