--- a/CryptoPortfolioTracker.csproj
+++ b/CryptoPortfolioTracker.csproj
@@ -500,7 +500,7 @@
 	  </Compile>
 	</ItemGroup>
 
-	<!--<Target Name="RemoveFoldersWithMuiFiles" AfterTargets="Build">
+	<Target Name="RemoveFoldersWithMuiFiles" AfterTargets="Build">
 		<ItemGroup>
 			<RemovingFiles Include="$(OutDir)*\*.mui" Exclude="$(OutDir)en-US\*.mui;$(OutDir)nl-NL\*.mui" />
 			<RemovingFolders Include="@(RemovingFiles->'%(RootDir)%(Directory)')" />
@@ -512,6 +512,6 @@
 	<Target Name="RemoveNonWindowsRuntimes" AfterTargets="Build">
 		<Exec Command="powershell -NoProfile -ExecutionPolicy Bypass -Command &quot;if (Test-Path '$(OutDir)runtimes') { Get-ChildItem -Path '$(OutDir)runtimes' -Directory | Where-Object { $_.Name -notlike 'win*' } | ForEach-Object { Remove-Item -LiteralPath $_.FullName -Recurse -Force -ErrorAction SilentlyContinue } }&quot;" />
 		<Message Text="Removed Non-Windows runtimes from Build" Importance="high" />
-	</Target>-->
+	</Target>
 
 </Project>
