--- a/CryptoPortfolioTracker.csproj
+++ b/CryptoPortfolioTracker.csproj
@@ -121,6 +121,7 @@
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Polly.Core" Version="8.3.0" />
+    <PackageReference Include="QuestPDF" Version="2025.7.3" />
     <PackageReference Include="Serilog" Version="4.2.1-dev-02337" />
     <PackageReference Include="Serilog.Expressions" Version="5.1.0-dev-00186" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1-dev-02308" />
@@ -219,6 +220,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Fonts\" />
+    <Folder Include="Reporting\Models\" />
+    <Folder Include="Reporting\Queries\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
